--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^7.2.5",
+    "bourbon": "^5.0.0",
     "cssnano": "^3.10.0",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "grunt-postcss": "^0.9.0",
     "pg": "6.x",
     "pixrem": "^4.0.1",
-    "postcss": "^6.0.16"
+    "postcss": "^6.0.16",
+    "susy": "^3.0.3"
   },
   "devDependencies": {
+    "fontello": "^0.5.0",
     "grunt": "^1.0.1",
     "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-sass": "^1.0.0",
